<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.lida.restAssured</groupId>
    <artifactId>qa</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>qa</name>

    <profiles>
        <profile>
            <id>autotests</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <project.name>qa</project.name>
                <maven-surefire-plugin>3.1.2</maven-surefire-plugin>
                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
                <maven.resources-plugin.version>3.3.1</maven.resources-plugin.version>
                <maven.compiler.source>21</maven.compiler.source>
                <log4j.version>2.24.3</log4j.version>
                <rest-assured.version>5.5.1</rest-assured.version>
                <json-version>20231013</json-version>
                <junit.version>5.9.1</junit.version>
                <junit-platform-version>1.9.1</junit-platform-version>
                <selenium.version>4.29.0</selenium.version>
                <lombok.version>1.18.30</lombok.version>
                <appache-poi.version>5.2.3</appache-poi.version>
                <commons-validator.version>1.7</commons-validator.version>
                <webdrivermanager.version>5.9.3</webdrivermanager.version>
                <hamcrest.version>2.2</hamcrest.version>
            </properties>

            <dependencies>
                <dependency>
                    <groupId>org.hamcrest</groupId>
                    <artifactId>hamcrest</artifactId>
                    <version>${hamcrest.version}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.hamcrest</groupId>
                    <artifactId>hamcrest-library</artifactId>
                    <version>${hamcrest.version}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.junit.jupiter</groupId>
                    <artifactId>junit-jupiter-engine</artifactId>
                    <version>${junit.version}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.junit.platform</groupId>
                    <artifactId>junit-platform-suite-engine</artifactId>
                    <version>${junit-platform-version}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.projectlombok</groupId>
                    <artifactId>lombok</artifactId>
                    <version>${lombok.version}</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.poi</groupId>
                    <artifactId>poi</artifactId>
                    <version>${appache-poi.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.apache.poi</groupId>
                    <artifactId>poi-ooxml</artifactId>
                    <version>${appache-poi.version}</version>
                </dependency>
                <dependency>
                    <groupId>commons-validator</groupId>
                    <artifactId>commons-validator</artifactId>
                    <version>${commons-validator.version}</version>
                </dependency>
                <dependency>
                    <groupId>io.github.bonigarcia</groupId>
                    <artifactId>webdrivermanager</artifactId>
                    <version>${webdrivermanager.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-api</artifactId>
                    <version>${log4j.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-core</artifactId>
                    <version>${log4j.version}</version>
                </dependency>
                <dependency>
                    <groupId>io.rest-assured</groupId>
                    <artifactId>rest-assured</artifactId>
                    <version>${rest-assured.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.seleniumhq.selenium</groupId>
                    <artifactId>selenium-java</artifactId>
                    <version>${selenium.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.json</groupId>
                    <artifactId>json</artifactId>
                    <version>${json-version}</version>
                </dependency>
            </dependencies>

            <repositories>
                <repository>
                    <id>central</id>
                    <url>https://repo.maven.apache.org/maven2</url>
                    <snapshots>
                        <enabled>true</enabled>
                        <updatePolicy>never</updatePolicy>
                        <checksumPolicy>warn</checksumPolicy>
                    </snapshots>
                    <releases>
                        <enabled>true</enabled>
                        <checksumPolicy>warn</checksumPolicy>
                    </releases>
                </repository>
                <repository>
                    <id>atlassian-public</id>
                    <url>https://packages.atlassian.com/maven-external/</url>
                    <snapshots>
                        <enabled>true</enabled>
                        <updatePolicy>never</updatePolicy>
                        <checksumPolicy>warn</checksumPolicy>
                    </snapshots>
                    <releases>
                        <enabled>true</enabled>
                        <checksumPolicy>warn</checksumPolicy>
                    </releases>
                </repository>
            </repositories>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven-surefire-plugin}</version>
                        <configuration>
                            <test><!-- your test suite class name should be here --></test>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>${maven-compiler-plugin.version}</version>
                        <configuration>
                            <source>${maven.compiler.source}</source>
                            <target>${maven.compiler.source}</target>
                            <compilerArgs>--enable-preview</compilerArgs>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-resources-plugin</artifactId>
                        <version>${maven.resources-plugin.version}</version>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>